source-code/K8s/ingress/04.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sup-micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: "serviceName=echoserver-svc rewrite=/"
    nginx.org/rewrites: "serviceName=helloworld-svc rewrite=/"
spec:
  rules:
   - host: ...................................................
        paths:
          - path: /echo
            pathType: Exact
            backend:
              serviceName: echoserver-svc
              servicePort: 80

          - path: /hello
            pathType: Exact
            backend:
              serviceName: helloworld-svc
              servicePort: 80
